# project_template

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  RELEASE_NOTES.md  cookiecutter.code-workspace  cookiecutter.json  pyproject.toml
.devcontainer/: Dockerfile  config_devcontainer.sh  devcontainer.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  RELEASE_NOTES.md  environment.yml  pyproject.toml  sonar-project.properties  {{cookiecutter.project_slug}}.code-workspace
{{cookiecutter.project_slug}}/.devcontainer/: Dockerfile  config_devcontainer.sh  devcontainer.env  devcontainer.json  devcontainer_f1.env
{{cookiecutter.project_slug}}/docs/: Makefile
{{cookiecutter.project_slug}}/docs/source/: conf.py  index.rst  installation.rst  profiling.rst
{{cookiecutter.project_slug}}/notebooks/: jupytext_example.py
{{cookiecutter.project_slug}}/tests/: __init__.py  conftest.py
{{cookiecutter.project_slug}}/tests/unit/: test_utils.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py  __main__.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/scripts/: dummy.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/utils/: __init__.py  _hello.py
