[tool.poetry]
name = "cookiecutter_pypackage"
version = "0.1.0"
description = "This is the description for this package."
authors = ["Ortiz Fernandez, Alvaro <ortiz.fernandez.alvaro@gmail.com>"]
maintainers = [
    "Ortiz Fernandez, Alvaro <ortiz.fernandez.alvaro@gmail.com>",
]

license = "Proprietary"
keywords = ["cookiecutter"]
repository = "https://github.com/alvaroof/project_template"

readme = ["README.md", "LICENSE", "RELEASE_NOTES.md"]

[tool.poetry.dependencies]
python = "~3.9"
cookiecutter = ">=1.4.0"
pre-commit = ">=2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 100
