[tool.poetry]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_description }}"
authors = ["Novartis International AG - Barcelona Digital Finance Hub <bcn.digitalfinance@novartis.com>"]
packages = [{include = "{{cookiecutter.package_name}}"}]

license = "Propietary"

keywords = [""]

repository = "{{ cookiecutter.repository_url }}"

readme = ["README.md", "LICENSE", "RELEASE_NOTES.md"]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps"
]

include = ["{{ cookiecutter.package_name }}/*"]
exclude = ["tests/*"]

[tool.poetry.dependencies]
click = "~8"
loguru = "~0.6"
python = "~3.9"
nvs-tk = {git = "https://bitbucketenterprise.aws.novartis.net/scm/faldscore/toolkit.git", rev = "1.0.0"}
sktime = "^0.15.1"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "22.6.0"}
coverage = "6.4.3"
darglint = "1.8.1"
docformatter = "1.4"
flake8 = "5.0.4"
flake8-pyproject = "~1"
GitPython = "3.1.27"
isort = "5.10.1"
jupyterlab = "3.2.5"
jupytext = "1.13.7"
jupyter_contrib_nbextensions = "0.5.1"
pre-commit = "2.20.0"
pylint = "2.15.10"
pytest = "7.2.0"
pytest-runner = "6.0.0"
pytest-xdist = "3.1.0"
pytest-testmon = "1.4.2"
python-dotenv = "0.20.0"
radon = "5.1.0"
semver = "2.13.0"
snakeviz = "2.1.1"

[tool.poetry.group.docs.dependencies]
furo = "^2022.12.7"
myst-parser = "^0.18.1"
sphinx = "5.3.0"
sphinx-autodoc-typehints = "^1.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}.__main__:_main"

[tool.flake8]
exclude = "docs"
max-line-length = 100
docstring_style = "sphinx"
ignore = ["DAR003", "W503"]
ignore_regex = "^test_(.*)"
